@@ -3,3 +3,7 @@ Maurizio Boriani <baux@member.fsf.org>
 
 Linas Vepstas <linasvepstas@gmail.com>
 	Numerous bug fixes.
+
+Misc bug fixes:
+---------------
+* Andrew Gaylard <ag@computer.org>
